# semantic-search-engine

./: Cargo.toml  README.md  docker-compose.yaml
indexing-worker/: Cargo.toml  README.md  config.yaml
indexing-worker/src/: handler.rs  main.rs
indexing-worker/src/config/: mod.rs
indexing-worker/src/error/: mod.rs
indexing-worker/src/kafka/: mod.rs
indexing-worker/src/qdrant/: mod.rs
ingestion-api/: Cargo.toml  README.md  config.yaml
ingestion-api/src/: main.rs
ingestion-api/src/config/: mod.rs
ingestion-api/src/error/: mod.rs
ingestion-api/src/handlers/: mod.rs
ingestion-api/src/kafka/: mod.rs
ingestion-api/src/routes/: mod.rs
ingestion-api/src/state/: mod.rs
matching-service/: Cargo.toml  README.md  config.yaml
matching-service/src/: main.rs
matching-service/src/config/: mod.rs
matching-service/src/error/: mod.rs
matching-service/src/handlers/: mod.rs
matching-service/src/qdrant/: mod.rs
matching-service/src/routes/: mod.rs
matching-service/src/state/: mod.rs
shared-types/: Cargo.toml  README.md
shared-types/src/: events.rs  lib.rs  types.rs
vector-worker/: Cargo.toml  README.md  config.yaml
vector-worker/src/: handler.rs  main.rs
vector-worker/src/config/: mod.rs
vector-worker/src/error/: mod.rs
vector-worker/src/kafka/: mod.rs
vector-worker/src/vectorizer/: mod.rs
