[package]
name = "ingestion-api"
version = "0.1.0"
edition = "2024"

[dependencies]
shared-types = {path = "../shared-types"}

axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.49", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rdkafka = { version = "0.38", features = ["tokio", "cmake-build"] }