[package]
name = "matching-service"
version = "0.1.0"
edition = "2024"

[dependencies]
shared-types = { path = "../shared-types" }

# Web Framework & Runtime
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml_serde = "0.10"
uuid = { version = "1.0", features = ["serde", "v4"] }

# Qdrant Client
qdrant-client = { version = "1.7", default-features = false }

# ML / BERT embeddings (Same as vector-worker)
rust-bert = { version = "0.23", features = ["remote"] }

# Dependency overrides to fix rust-bert's transitive dependencies
[dependencies.console]
version = "0.16"
default-features = true

[dependencies.indicatif]
version = "0.18"